# Sample

./: Client.py  Prompt.txt  README.md  Readme_ver.md  Test.py  Wikimedia.txt  architecture_forward.py  calibrate_threshold.py  dir_embedding_pipeline.py  dir_embedding_pipeline_corrected.py  document.md  env.txt  forward.py  git.txt  nandu.py  pureC.py  pyproject.toml  read.md  requirements.txt  setup.py  train.py  unittest.py
app/: main.py  requiremments.txt
