
[tool.poetry]
name = "apgenai_sharepoint_client"
version = "0.1.0"
description = "A Python library for interacting with SharePoint using Microsoft Graph API."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
requests = "^2.28.2"
azure-identity = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"
